IGNITE-22671 Fix ducktape jdk11 build